made some fixes

--- a/Vidly/Views/Home/About.cshtml
+++ b/Vidly/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading"><h3 style="color:white">Vidly Description:</h3></div>
     <div class="panel-body">
-        <p class="lead">Vidly is a Video Rental Application which allow its Members to record rentals for available movies its customers.</p>
+        <p class="lead">Vidly is a Video Rental Application which allow its Members to record rentals of available movies for customers.</p>
         <p class="lead">It Allow User To:<p>
             <ul class="lead">
                 <li>Add/Manage Customers</li>
