--- a/Vidly/Views/Home/Index.cshtml
+++ b/Vidly/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Vidly</h1>
-    <p class="lead">Vidly is a Video Rental Application its Members can record rentals for available movies for customers.</p>
+    <p class="lead">Vidly is a Video Rental Application allow its Members to record rentals of available movies for customers.</p>
     <p><a href="/Home/About" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
